--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,15 +1,18 @@
 {% extends "base.html" %}
+{% load static %}
 {% block content %} 
+{% include 'navbar.html' %}
+  <section class="text-gray-600 body-font">
+    <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
+      <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="static/img/banner.svg">
+      <div class="text-center lg:w-2/3 w-full">
+        <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Hassle-free waste management</h1>
+        <p class="mb-8 leading-relaxed">Meggings kinfolk echo park stumptown DIY, kale chips beard jianbing tousled. Chambray dreamcatcher trust fund, kitsch vice godard disrupt ramps hexagon mustache umami snackwave tilde chillwave ugh. Pour-over meditation PBR&B pickled ennui celiac mlkshk freegan photo booth af fingerstache pitchfork.</p>
+        <div class="flex justify-center">
+          <a href="{% url 'starter' %}" class="inline-flex text-white bg-green-500 border-0 py-2 px-6 focus:outline-none hover:bg-green-600 rounded text-lg">Get Started</a>
 
-<h1>Greenify</h1>
-
-<a href="{% url 'authentication:register-user' %}">Get Started as user</a>
-<br>
-<a href="{% url 'authentication:register-voluntere' %}">Get Started as voluntere</a>
-<br>
-<a href="{% url 'authentication:register-admin' %}">Get Started as admin</a>
-<br>
-<a href="{% url 'authentication:login' %}">Login</a>
-
-
+        </div>
+      </div>
+    </div>
+  </section>
 {% endblock content %}
