--- a/templates/success.html
+++ b/templates/success.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Login Success</h1>
-<p>Logged in as : {{ user }}</p>
-<br>
-<a href="{% url 'authentication:logout' %}">Logout</a>
+{% include 'navbar.html' %}
+<h1 class="text-3xl font-bold text-center">Login Success</h1>
+
 {% endblock content %}
