--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,13 +1,20 @@
 {% extends 'base.html' %}
-
+{% load crispy_forms_tags %}
+{% load tailwind_filters %}
 
 {% block content %}
-
-<form method="post">
-
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Login">
-</form>
+{% include 'navbar.html' %}
+<section class="text-gray-600 body-font overflow-hidden">
+    <div class="flex justify-center px-5 py-24 mx-auto">
+      <form method="post" class="p-10 shadow-xl rounded-lg">
+          <h1 class="text-lg font-bold text-center">Login</h1>
+    {% csrf_token %} {{ form | crispy }}
+    <div class="flex justify-center">
+      <input type="submit" value="Login"  class="bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-green-500 mt-10" />
+    </div>
+  </div>
+  </form>
+  </div>
+</section>
 
 {% endblock content %}
