--- a/tokens/templates/map.html
+++ b/tokens/templates/map.html
@@ -1,12 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
+{% load static %}
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <style type="text/css">
+      #map {
+        width: 700px;
+        height: 500px;
+      }
+    </style>
+    <script
+      type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js"
+    ></script>
+    <title>Save Marker Example</title>
   </head>
   <body>
-    {{ map|safe }}
+    <h1>Select a location!</h1>
+    <p>
+      Click on a location on the map to select it. Drag the marker to change
+      location.
+    </p>
+
+    <!--map div-->
+    <div id="map"></div>
+    <button id="test">click</button>
+
+    <!--our form-->
+    <h2>Chosen Location</h2>
+    <form method="post">
+      <input type="text" id="lat" />
+      <br />
+      <input type="text" id="lng" readonly="yes" />
+    </form>
+
+    <script type="text/javascript" src="{% static 'js/map.js' %}"></script>
   </body>
 </html>
