feat:token form created

--- a/tokens/templates/map.html
+++ b/tokens/templates/map.html
@@ -22,12 +22,11 @@
 
     <!--map div-->
     <div id="map"></div>
-    <button id="test">click</button>
 
     <!--our form-->
     <h2>Chosen Location</h2>
     <form method="post">
-      <input type="text" id="lat" />
+      <input type="text" id="lat" readonly="yes" />
       <br />
       <input type="text" id="lng" readonly="yes" />
     </form>
