--- a/tokens/templates/token_list.html
+++ b/tokens/templates/token_list.html
@@ -1,21 +1,59 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>List</title>
-  </head>
-  <body>
-    {% for list in lists %}
-    <a
-      href="https://google.com/maps/place/{{list.lat}},{{list.lng}}"
-      target="_blank"
-    >
-      {{list.lat}}, {{list.lng}} <img src='../../{{list.images}}'>
-    </a>
-    <br />
-    {% endfor %}
-    <script></script>
-  </body>
-</html>
+{% extends "base.html" %}
+
+
+{% block content %}
+{% include 'navbar.html' %}
+
+
+<section class="text-gray-600 body-font">
+  <div class="container px-5 pb-24 mx-auto">
+    <div class="flex justify-center">
+      <h1 class="text-lg font-bold">Current Tokens</h1>
+    </div>
+    <div class="flex flex-wrap">
+      {% for token in tokens %}
+        <div class="p-4 md:w-1/3">
+          <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
+            {% comment %} <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="../../{{token.images}}" alt="blog"> {% endcomment %}
+            <iframe class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://google.com/maps?q={{token.lat}},{{token.lng}}&z=15&output=embed" loading="lazy" allowfullscreen alt="blog"></iframe>
+            <div class="p-6">
+              <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">CATEGORY</h2>
+              <h1 class="title-font text-lg font-medium text-gray-900 mb-3">{{token.lat}},{{token.lng}}</h1>
+              <p class="leading-relaxed mb-3">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
+              <div class="flex items-center flex-wrap ">
+                <a href="{% url 'tokens:detail' token.id %}" class="text-green-500 inline-flex items-center md:mb-2 lg:mb-0">Learn More
+                  <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M5 12h14"></path>
+                    <path d="M12 5l7 7-7 7"></path>
+                  </svg>
+                </a>
+                <span class="text-gray-400 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
+                  <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                    <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                    <circle cx="12" cy="12" r="3"></circle>
+                  </svg>1.2K
+                </span>
+                <span class="text-gray-400 inline-flex items-center leading-none text-sm">
+                  <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                    <path d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"></path>
+                  </svg>6
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      {% endfor %}
+
+    </div>
+  </div>
+</section>
+
+
+{% comment %} {% for list in lists %}
+<a href="https://google.com/maps/place/{{list.lat}},{{list.lng}}" target="_blank">
+  {{list.lat}}, {{list.lng}} <img src='../../{{list.images}}'>
+</a>
+<br />
+{% endfor %} {% endcomment %}
+
+{% endblock content %}
