--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -12,7 +12,9 @@
     <div class="flex justify-center">
       <input type="submit" value="Login"  class="bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-green-500 mt-10" />
     </div>
-    <a href={% url 'starter' %}>Don't you have a role? (Click Here)</a>
+    <div class="mt-5 flex justify-end w-full mr-2"> 
+      <a href={% url 'starter' %}>Don't you have a role? (Click Here)</a>
+    </div>
   </div>
   </form>
   </div>
