--- a/templates/starter.html
+++ b/templates/starter.html
@@ -14,7 +14,7 @@
       <div class="flex flex-wrap justify-center">
         <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
           <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">User</h2>
-          <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+          <p class="leading-relaxed text-base mb-4">If you are just a user who want to inform about your carbage collection</p>
           <a class="text-green-500 inline-flex items-center" href="{% url 'authentication:register-user' %}">Get Started
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
               <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -22,8 +22,8 @@
           </a>
         </div>
         <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
-          <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Voluntere</h2>
-          <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+          <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Volunteer</h2>
+          <p class="leading-relaxed text-base mb-4">If you are ready to collect garbage and dispose it with correct methods</p>
           <a class="text-green-500 inline-flex items-center" href="{% url 'authentication:register-voluntere' %}">Get Started
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
               <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -32,7 +32,7 @@
         </div>
         <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
           <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Admin</h2>
-          <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+          <p class="leading-relaxed text-base mb-4">If you are an Administrator who takes care of volunteering and users</p>
           <a class="text-green-500 inline-flex items-center" href="{% url 'authentication:register-admin' %}">Get Started
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
               <path d="M5 12h14M12 5l7 7-7 7"></path>
