--- a/tokens/templates/token_create.html
+++ b/tokens/templates/token_create.html
@@ -23,7 +23,23 @@
       <p class="leading-relaxed mb-5 text-gray-600">Post-ironic portland shabby chic echo park, banjo fashion axe</p>
       <div class="relative mb-4">
         <label for="email" class="leading-7 text-sm text-gray-600">Phone Number*</label>
-        <input type="tel" id="number" name="number" pattern="[+]{1}[0-9]{11,14}" required class="w-full bg-white rounded border border-gray-300 focus:border-green-500 focus:ring-2 focus:ring-green-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+        <input type="tel" id="number" name="number" placeholder="+91123456789" pattern="[+]{1}[0-9]{11,14}" required class="w-full bg-white rounded border border-gray-300 focus:border-green-500 focus:ring-2 focus:ring-green-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+      </div>
+      <div class="mb-4">
+        <label for="email" class="leading-7 text-sm text-gray-600">Waste Category*</label>
+      <select name="category" required id="id_category" class="w-full bg-white rounded border border-gray-300 focus:border-green-500 focus:ring-2 focus:ring-green-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+        <option value="" selected>---------</option>
+      
+        <option value="Plastic">Plastic</option>
+      
+        <option value="Bio-degradable">Bio-degradable</option>
+      
+        <option value="Medical or Clinical Wastes">Medical or Clinical Wastes</option>
+      
+        <option value="Industrial Sources of Wastes">Industrial Sources of Wastes</option>
+      
+        <option value="Electronic sources of waste">Electronic sources of waste</option>
+      </select>
       </div>
       <label for="email" class="leading-7 text-sm text-gray-600">Image</label>
       <input type="file" name="image" />
